# libtagcoverart

./: .anjuta_sym_db.db  BUGS  Makefile.am  Makefile.in  README.md  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  traces.0  traces.1
debian/: Makefile  changelog.in  control.in
src/: Makefile.am  Makefile.in  lib.c  libtagcoverart-0.1.pc.in  libtagcoverart.c  libtagcoverart.h  libtagcoverart.hpp  libtagcoverart.pc.in  tagcoverart.cpp
